--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*"],
+  "packages": ["packages/*", "examples/*"],
   "command": {
     "bootstrap": {
       "npmClientArgs": ["--no-package-lock"]
