--- a/packages/threejs/tsconfig.json
+++ b/packages/threejs/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "module": "CommonJS",
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
     "declaration": false,
