Create Comparator architecture

--- a/packages/matterjs/package.json
+++ b/packages/matterjs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ecsx/core",
-  "libName": "ecsxCore",
+  "name": "@ecsx/matterjs",
+  "libName": "ecsxMatterjs",
   "version": "1.0.0",
   "description": "",
   "main": "lib/main.js",
@@ -13,9 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/matter-js": "^0.14.2",
     "rollup": "^2.3.4",
     "rollup-plugin-typescript2": "^0.27.0",
-    "three": "^0.115.0",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
@@ -28,5 +28,10 @@
         "src/": ".tmp/test-build/"
       }
     }
+  },
+  "dependencies": {
+    "@ecsx/core": "*",
+    "matter-js": "^0.14.2",
+    "poly-decomp": "^0.3.0"
   }
 }
