--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/benchmark": "^2.1.1",
+    "benchmark": "^2.1.4",
     "rollup": "^2.58.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
