--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "boot": "lerna bootstrap"
+    "boot": "lerna bootstrap",
+    "start": "lerna run start --parallel",
+    "build": "lerna run build"
   },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^6.0.3"
   }
 }
