--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@ecsx/core",
-  "libName": "ecsxCore",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "lib/index.js",
+  "module": "lib/index.module.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "start": "rollup -c rollup.config.js -w",
@@ -12,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
-    "rollup": "^2.58.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "@rollup/plugin-typescript": "^9.0.2",
+    "rollup": "^3.3.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4"
   }
 }
