--- a/packages/threejs/package.json
+++ b/packages/threejs/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@ecsx/threejs",
-  "libName": "ecsxThreejs",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "lib/index.js",
-  "types": "lib/index.ts",
+  "types": "lib/index.d.ts",
+  "module": "lib/index.module.js",
   "scripts": {
     "start": "rollup -c rollup.config.js -w",
     "build": "rollup -c rollup.config.js"
@@ -12,14 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.133.1"
+    "three": "^0.146.0"
   },
   "devDependencies": {
-    "@ecsx/core": "1.0.0",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/three": "^0.133.1",
-    "rollup": "^2.58.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "@ecsx/core": "*",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "@types/three": "^0.146.0",
+    "rollup": "^3.3.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4"
   }
 }
